; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_imsg-buffer.c_ibuf_enqueue.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_imsg-buffer.c_ibuf_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msgbuf = type { i32, i32 }
%struct.ibuf = type { i32 }

@entry = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.msgbuf*, %struct.ibuf*)* @ibuf_enqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ibuf_enqueue(%struct.msgbuf* %0, %struct.ibuf* %1) #0 {
  %3 = alloca %struct.msgbuf*, align 8
  %4 = alloca %struct.ibuf*, align 8
  store %struct.msgbuf* %0, %struct.msgbuf** %3, align 8
  store %struct.ibuf* %1, %struct.ibuf** %4, align 8
  %5 = load %struct.msgbuf*, %struct.msgbuf** %3, align 8
  %6 = getelementptr inbounds %struct.msgbuf, %struct.msgbuf* %5, i32 0, i32 1
  %7 = load %struct.ibuf*, %struct.ibuf** %4, align 8
  %8 = load i32, i32* @entry, align 4
  %9 = call i32 @TAILQ_INSERT_TAIL(i32* %6, %struct.ibuf* %7, i32 %8)
  %10 = load %struct.msgbuf*, %struct.msgbuf** %3, align 8
  %11 = getelementptr inbounds %struct.msgbuf, %struct.msgbuf* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  ret void
}

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.ibuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
